<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:gravity="center_vertical"
    android:padding="@dimen/widget_padding">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autoSizeMaxTextSize="@dimen/text_size_widget_headline"
        android:autoSizeMinTextSize="@dimen/text_size_body"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:contentDescription="@string/appwidget_text"
        android:drawableLeft="@drawable/walk_black"
        android:drawablePadding="6dp"
        android:drawableTint="@color/widget_accent"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/passi"
        android:textAlignment="center"
        android:textColor="@color/widget_on_background"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autoSizeMaxTextSize="@dimen/text_size_subtitle"
        android:autoSizeMinTextSize="@dimen/text_size_autosize_min"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:drawableLeft="@drawable/route_outline"
        android:drawablePadding="6dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/kmEtichetta"
        android:textColor="@color/widget_on_background_variant" />
</LinearLayout>
