<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/space_l"
        android:paddingBottom="@dimen/space_m">

        <TextView
            android:id="@+id/giorno"
            style="@style/PassiText.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.08"
            android:text="@string/data"
            android:textAllCaps="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/passiProgress"
                style="@style/PassiProgressRing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="false"
                android:max="100"
                android:progress="0" />

            <LinearLayout
                android:id="@+id/passiOggiGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/PassiText.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.08"
                    android:text="@string/passi"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/passiOggi"
                    style="@style/PassiText.Display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passiOggi" />

                <TextView
                    android:id="@+id/passiObiettivo"
                    style="@style/PassiText.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passiObiettivo" />

            </LinearLayout>
        </RelativeLayout>

        <!-- riquadro meteo / calorie / chilometri -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_m"
            android:layout_marginTop="@dimen/space_l">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/card_content_padding">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/meteoIcona"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/no_meteo" />

                    <TextView
                        android:id="@+id/meteoTesto"
                        style="@style/PassiText.Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_s"
                        android:text="@string/temperatura" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/fire" />

                    <TextView
                        android:id="@+id/calorieTesto"
                        style="@style/PassiText.Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_s"
                        android:text="@string/calorie" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/kmIcona"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/route" />

                    <TextView
                        android:id="@+id/kmTesto"
                        style="@style/PassiText.Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_s"
                        android:text="@string/km" />
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/OMSProgress"
            style="@style/PassiProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_l"
            android:layout_marginTop="@dimen/space_l"
            android:indeterminate="false"
            android:max="100"
            android:progress="0" />

        <TextView
            android:id="@+id/OMS"
            style="@style/PassiText.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_l"
            android:layout_marginVertical="@dimen/space_s"
            android:text="@string/passiStandard"
            android:textAlignment="center" />
    </LinearLayout>

</FrameLayout>
